--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "^3.2.0",
     "react-test-renderer": "^16.12.0",
     "redux": "^4.0.4",
-    "superagent": "^5.1.0"
+    "superagent": "^5.1.0",
+    "typescript": "^3.7.2"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
